@@ -1,3 +1,11 @@
+2011-12-18  Mike Frysinger  <vapier@gentoo.org>
+
+	* bfin/clear_cache_range.c: New file.
+	* bfin/Makefile.in (SIM_OBJS): Add clear_cache_range.o.
+	(BOARD_OBJS): Likewise.
+	(BOARD_BSP): Set to libbfinbsp.a.
+	(${BOARD_BSP}): New rule.
+
 2011-12-15  Konrad Eisele <konrad@gaisler.com>
 
 	* configure.in: Add SPARC LEON support.
